--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Glory:ital,wght@0,100..800;1,100..800&family=Hammersmith+One&display=swap" rel="stylesheet">
-
   <title>LogicS</title>
 </head>
+
 <body>
   <div class="wrapped">
     <div class="logo">
@@ -22,6 +22,11 @@
       <div></div>
       <div></div>
     </div>
+  </div>
+  <div class="datos">
+    <h1>Bienvenidos</h1>
+    <p>Esto es <a class="logics">LogicS</a>, esta es una aplicacion web didactica que te ayudara con problemas relacionados a circuitos logicos,
+      pero que es lo que puedes encontrar aqui en <a class="logics">LogicS</a></p>
   </div>
 </body>
 </html>
