--- a/index.html
+++ b/index.html
@@ -28,5 +28,12 @@
     <p>Esto es <a class="logics">LogicS</a>, esta es una aplicacion web didactica que te ayudara con problemas relacionados a circuitos logicos,
       pero que es lo que puedes encontrar aqui en <a class="logics">LogicS</a></p>
   </div>
+  <div class="penta">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
 </body>
 </html>
