--- a/index.html
+++ b/index.html
@@ -25,15 +25,21 @@
   </div>
   <div class="datos">
     <h1>Bienvenidos</h1>
-    <p>Esto es <a class="logics">LogicS</a>, esta es una aplicacion web didactica que te ayudara con problemas relacionados a circuitos logicos,
-      pero que es lo que puedes encontrar aqui en <a class="logics">LogicS</a></p>
+    <div class="texto">
+      <p>Esto es <a class="logics">LogicS</a>, esta es una aplicacion web didactica que te ayudara con problemas relacionados a circuitos logicos,
+        pero que es lo que puedes encontrar aqui en <a class="logics">LogicS</a></p>
+    </div>
   </div>
-  <div class="penta">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+
+  <div class="funciones">
+    <h1>Funciones</h1>
+    <div class="penta">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
   </div>
 </body>
 </html>
