--- a/index.html
+++ b/index.html
@@ -6,16 +6,43 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/css2?family=Glory:ital,wght@0,100..800;1,100..800&family=Hammersmith+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <script defer src="./js/animaciones.js"></script>
+  <script src="./js/ciclebar.js"></script>
   <title>LogicS</title>
 </head>
 
 <body>
+
+  <nav>
+    <div class="nav-content">
+      <div class="boton">
+        <i class="fa-solid fa-angles-left"></i>
+      </div>
+      <span>
+        <a href="#"><i class="fa-solid fa-angles-left"></i></a>
+      </span>
+      <span>
+        <a href="#"><i class="fa-solid fa-angles-left"></i></a>
+      </span>
+      <span>
+        <a href="#"><i class="fa-solid fa-angles-left"></i></a>
+      </span>
+      <span>
+        <a href="#"><i class="fa-solid fa-angles-left"></i></a>
+      </span>
+      <span>
+        <a href="#"><i class="fa-solid fa-angles-left"></i></a>
+      </span>
+    </div>
+  </nav>
+
   <div class="wrapped">
-    <div class="logo hidden">
+    <div class="logo" >
       <img src="./img/Logics.png">
-      <h2 class="hidden">LogicS</h2>
+      <h2>LogicS</h2>
     </div>
     <div class="box">
       <div></div>
@@ -24,6 +51,7 @@
       <div></div>
     </div>
   </div>
+
   <div class="datos">
     <h1 class="hidden">Bienvenidos</h1>
     <div class="texto hidden" >
@@ -55,6 +83,13 @@
         <svg class="Log" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M96 0C43 0 0 43 0 96L0 416c0 53 43 96 96 96l288 0 32 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l0-64c17.7 0 32-14.3 32-32l0-320c0-17.7-14.3-32-32-32L384 0 96 0zm0 384l256 0 0 64L96 448c-17.7 0-32-14.3-32-32s14.3-32 32-32zm32-240c0-8.8 7.2-16 16-16l192 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-192 0c-8.8 0-16-7.2-16-16zm16 48l192 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-192 0c-8.8 0-16-7.2-16-16s7.2-16 16-16z"/></svg>
         <p>Biblioteca con conceptos relacionados a los circuitos logicos</p>
       </div>
+    </div>
+  </div>
+
+  <div class="desarrollo">
+    <h1>Creación</h1>
+    <div class="create">
+      
     </div>
   </div>
 </body>
