--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Glory:ital,wght@0,100..800;1,100..800&family=Hammersmith+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <script defer src="./js/animaciones.js"></script>
-  <script src="./js/ciclebar.js"></script>
+  <script defer src="./js/ciclebar.js"></script>
   <title>LogicS</title>
 </head>
 
 <body>
 
-  <nav>
+  <nav class="">
     <div class="nav-content">
-      <div class="boton">
+      <div class="toggle-btn">
         <i class="fa-solid fa-angles-left"></i>
       </div>
-      <span>
+      <span style="--i:1;">
         <a href="#"><i class="fa-solid fa-angles-left"></i></a>
       </span>
-      <span>
+      <span style="--i:2;">
         <a href="#"><i class="fa-solid fa-angles-left"></i></a>
       </span>
-      <span>
+      <span style="--i:3;">
         <a href="#"><i class="fa-solid fa-angles-left"></i></a>
       </span>
-      <span>
+      <span style="--i:4;">
         <a href="#"><i class="fa-solid fa-angles-left"></i></a>
       </span>
-      <span>
+      <span style="--i:5;">
         <a href="#"><i class="fa-solid fa-angles-left"></i></a>
       </span>
     </div>
