--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
 
 <body>
 
+  <div class="header">
+    <div class="fecha">
+      <p>Miercoles, 25-Dic</p>
+      <i class="fa-solid fa-sun"></i>
+      <p>22* Sala Principal</p>
+    </div>
+    <div class="centro">
+      <i class="fa-solid fa-house"></i>
+      <div class="circulo"></div>
+      <p>Inicio</p>
+    </div>
+    <div class="busqueda">
+      <i class="fa-solid fa-magnifying-glass"></i>
+      <p>Busqueda</p>
+    </div>
+  </div>
+
   <nav class="">
     <div class="nav-content">
       <div class="toggle-btn">
@@ -28,7 +45,7 @@
         <a href="#"><i class="fa-solid fa-angles-left"></i></a>
       </span>
       <span style="--i:3;">
-        <a href="#"><i class="fa-solid fa-angles-left"></i></a>
+        <a href="index.html"><img src="./img/Logics.svg" alt=""></i></a>
       </span>
       <span style="--i:4;">
         <a href="#"><i class="fa-solid fa-angles-left"></i></a>
