--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <a href="index.html"><img src="./img/Logics.svg" alt=""></i></a>
       </span>
       <span style="--i:4;">
-        <a href="#"><i class="fa-solid fa-angles-left"></i></a>
+        <a href="#"><i class="fa-solid fa-diagram-project"></i></a>
       </span>
       <span style="--i:5;">
-        <a href="#"><i class="fa-solid fa-angles-left"></i></a>
+        <a href="#"><i class="fa-solid fa-book"></i></a>
       </span>
     </div>
   </nav>
