--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <i class="fa-solid fa-angles-left"></i>
       </div>
       <span style="--i:1;">
-        <a href="#"><i class="fa-solid fa-angles-left"></i></a>
+        <a href="#"><i class="fa-solid fa-house"></i></a>
       </span>
       <span style="--i:2;">
-        <a href="#"><i class="fa-solid fa-angles-left"></i></a>
+        <a href="#"><i class="fa-solid fa-question"></i></a>
       </span>
       <span style="--i:3;">
         <a href="index.html"><img src="./img/Logics.svg" alt=""></i></a>
@@ -106,7 +106,11 @@
   <div class="desarrollo">
     <h1>Creación</h1>
     <div class="create">
-      
+      <div class="nombre">
+        <p>Esta aplicación fue creada por Núñez Manrique Cuauhtémoc Emmanuel, el logo y nombre de la misma son ideas originales del creador, por lo que quedan sus derechos reservados de uso, la idea de LogicS no puede ser utilizada con otros fines diferentes a los expuestos por el creador. </p>
+      </div>
+      <div class="bola"></div>
+      <div>Algo</div>
     </div>
   </div>
 </body>
