--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
       <div class="nombre">
         <p>Esta aplicación fue creada por Núñez Manrique Cuauhtémoc Emmanuel, el logo y nombre de la misma son ideas originales del creador, por lo que quedan sus derechos reservados de uso, la idea de LogicS no puede ser utilizada con otros fines diferentes a los expuestos por el creador. </p>
       </div>
-      <div class="bola hidden"></div>
+      <div class="bola hidden">
+        <i class="fa-solid fa-screwdriver-wrench"></i>
+      </div>
       <div class="lateral">
         <p>Esta aplicación ha sido elaborada en:</p>
         <div class="lenguajes">
