--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         <div class="lema hidden">
           <h1>Facil, accesible y agradable</h1>
           <h1>asi es <span>LogicS</span></h1>
+          <p class="hidden">Para una mejor experiencia LogicS ha sido diseñada para ser utilizada desde cualquier dispositivo con acceso a internet y cualquier navergador</p>
         </div>
         <div class="cubos">
           <div class="cubo">
