--- a/index.html
+++ b/index.html
@@ -136,9 +136,19 @@
         <div class="lema hidden">
           <h1>Facil, accesible y agradable</h1>
           <h1>asi es <span>LogicS</span></h1>
-          <p class="hidden">Para una mejor experiencia LogicS ha sido diseñada para ser utilizada desde cualquier dispositivo con acceso a internet y cualquier navergador</p>
+          <p>Para una mejor experiencia LogicS ha sido diseñada para ser utilizada desde cualquier dispositivo con acceso a internet y cualquier navergador</p>
+          <div class="navegadores hidden">
+            <i class="fa-brands fa-chrome"></i>
+            <i class="fa-brands fa-google"></i>
+            <i class="fa-brands fa-internet-explorer"></i>
+            <i class="fa-brands fa-firefox"></i>
+            <i class="fa-brands fa-safari"></i>
+            <i class="fa-brands fa-opera"></i>
+            <i class="fa-brands fa-brave"></i>
+          </div>
         </div>
-        <div class="cubos">
+        
+        <div class="cubos hidden">
           <div class="cubo">
             <div class="top">
               <i class="fa-solid fa-mobile"></i>
@@ -152,7 +162,7 @@
           </div>
           <div class="cubo">
             <div class="top">
-              <i class="fa-solid fa-tablet"></i>
+              <i class="fa-solid fa-tablet-button"></i>
             </div>
             <div class="panel">
               <span style="--i:0;"></span>
@@ -174,7 +184,7 @@
           </div>
           <div class="cubo">
             <div class="top">
-              <i class="fa-solid fa-mobile"></i>
+              <i class="fa-solid fa-desktop"></i>
             </div>
             <div class="panel">
               <span style="--i:0;"></span>
