--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <script defer src="./js/animaciones.js"></script>
   <script defer src="./js/ciclebar.js"></script>
+  <script defer src="./js/tabs.js"></script>
   <title>LogicS</title>
 </head>
 
@@ -40,13 +41,13 @@
         <i class="fa-solid fa-angles-left"></i>
       </div>
       <span style="--i:1;">
-        <a href="#"><i class="fa-solid fa-house"></i></a>
+        <a href="index.html"><i class="fa-solid fa-house"></i></a>
       </span>
       <span style="--i:2;">
         <a href="#"><i class="fa-solid fa-question"></i></a>
       </span>
       <span style="--i:3;">
-        <a href="index.html"><img src="./img/Logics.svg" alt=""></i></a>
+        <a href="beta.html"><img src="./img/Logics.svg" alt=""></i></a>
       </span>
       <span style="--i:4;">
         <a href="#"><i class="fa-solid fa-diagram-project"></i></a>
@@ -104,6 +105,35 @@
     </div>
   </div>
 
+  <div class="uso">
+    <h1 class="hidden">Guia</h1>
+    <p class="hidden">Si esta es tu primera vez utilizando <span>LogicS</span> te recomendamos leer esta sección para un mejor entendimiento de la herramienta</p>
+    <div class="conteiner">
+      <div class="tabs">
+        <h3 class="active"><i class="fa-solid fa-compass"></i>Navegación</h3>
+        <h3><i class="fa-solid fa-circle-dot"></i>Botones</h3>
+        <h3><i class="fa-solid fa-bookmark"></i>Sección</h3>
+      </div>
+      <div class="tab-content">
+        <div class="active">
+          <i class="fa-solid fa-compass"></i>
+          <h4>Navegacíon</h4>
+          
+        </div>
+        <div>
+          <h4>Segundo titulo</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+            Iure, voluptatibus. Deleniti exercitationem unde debitis reprehenderit sapiente maxime mollitia culpa ut nemo recusandae. Minima, aut necessitatibus?</p>
+        </div>
+        <div>
+          <h4>Tercer titulo</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+            Iure, voluptatibus. Deleniti exercitationem unde debitis reprehenderit sapiente maxime mollitia culpa ut nemo recusandae. Minima, aut necessitatibus?</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="desarrollo">
     <h1>Creación</h1>
     <div class="create">
@@ -136,11 +166,11 @@
         <div class="lema hidden">
           <h1>Facil, accesible y agradable</h1>
           <h1>asi es <span>LogicS</span></h1>
-          <p>Para una mejor experiencia LogicS ha sido diseñada para ser utilizada desde cualquier dispositivo con acceso a internet y cualquier navergador</p>
+          <p>Para una mejor experiencia, LogicS ha sido diseñada para ser utilizada desde cualquier dispositivo con acceso a internet y cualquier navergador</p>
           <div class="navegadores hidden">
             <i class="fa-brands fa-chrome"></i>
             <i class="fa-brands fa-google"></i>
-            <i class="fa-brands fa-internet-explorer"></i>
+            <i class="fa-brands fa-edge"></i>
             <i class="fa-brands fa-firefox"></i>
             <i class="fa-brands fa-safari"></i>
             <i class="fa-brands fa-opera"></i>
