--- a/beta.html
+++ b/beta.html
@@ -93,7 +93,7 @@
 </head>
 <body>
     <div id="container">
-        <h1>Simulador de Circuitos Lógicos</h1>
+        <h1>LogicS</h1>
         <div>
             <label for="logicExpression">Escribe tu proposición lógica:</label>
             <textarea id="logicExpression"></textarea>
