--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
   </div>
 
-  <div class="datos">
+  <div class="datos" id="datos">
     <h1 class="hidden">Bienvenidos</h1>
     <div class="texto hidden" >
       <p>Esto es <a class="logics">LogicS</a>, esta es una aplicacion web didactica que te ayudara con problemas relacionados a circuitos logicos,
@@ -79,7 +79,7 @@
     </div>
   </div>
 
-  <div class="funciones">
+  <div class="funciones" id="func">
     <h1>  Funciones  </h1>
     <div class="penta">
       <div class="hidden">
@@ -105,7 +105,7 @@
     </div>
   </div>
 
-  <div class="uso">
+  <div class="uso" id="guia">
     <h1 class="hidden">Guia</h1>
     <p class="hidden">Si esta es tu primera vez utilizando <span>LogicS</span> te recomendamos leer esta sección para un mejor entendimiento de la herramienta</p>
     <p class="hidden">En este momento estas en la seccion de Inicio, esta representada en el menu circular como el icono</p>
@@ -165,7 +165,7 @@
   </div>
   
 
-  <div class="desarrollo">
+  <div class="desarrollo" id="crear">
     <h1>Creación</h1>
     <div class="create">
       <div class="nombre">
@@ -185,7 +185,7 @@
     </div>
   </div>
 
-  <div class="acerca">
+  <div class="acerca" id="paridad">
     <h1 class="hidden">Paridad</h1>
     <div class="cont">
       <div class="caja">
@@ -264,12 +264,30 @@
     </div>
   </div>
 
-  <div class="multimedia">
+  <div class="multimedia" id="multi">
     <h1>Multimedia</h1>
   </div>
 
   <div class="footer">
-    a
+    <div class="pie">
+      <div class="social">
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-instagram"></i>
+      </div>
+      <ul class="links">
+        <li><a href="#datos">Inicio</a></li>
+        <li><a href="#func">Funciones</a></li>
+        <li><a href="#guia">Guia</a></li>
+        <li><a href="#crear">Creación</a></li>
+        <li><a href="#paridad">Paridad</a></li>
+        <li><a href="#multi">Multimedia</a></li>
+      </ul>
+      <img src="./img/ManLetra.png" width="50px">
+      <p>@2025 | Todos los derechos reservados pertenecientes a MGMC</p>
+      <p>@2025 | Todos los derechos reservados pertenecientes a MGMC</p>
+    </div>
   </div>
 
 </body>
