--- a/index.html
+++ b/index.html
@@ -271,10 +271,13 @@
   <div class="footer">
     <div class="pie">
       <div class="social">
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-tiktok"></i>
+        <i class="fa-brands fa-discord"></i>
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-x-twitter"></i>
       </div>
       <ul class="links">
         <li><a href="#datos">Inicio</a></li>
@@ -284,8 +287,7 @@
         <li><a href="#paridad">Paridad</a></li>
         <li><a href="#multi">Multimedia</a></li>
       </ul>
-      <img src="./img/ManLetra.png" width="50px">
-      <p>@2025 | Todos los derechos reservados pertenecientes a MGMC</p>
+      <img src="./img/ManLetra.png" width="70px">
       <p>@2025 | Todos los derechos reservados pertenecientes a MGMC</p>
     </div>
   </div>
